[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrawlee"
version = "0.1.0"
description = "Stealth-focused scraping client with browser impersonation, proxy rotation, retries, and auto parsing."
readme = "README.md"
authors = [
    { name = "Muhammad Saim", email = "saimsajidirl@gmail.com" }
]
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["scraping", "web-scraping", "http-client", "proxy", "curl-cffi", "asyncio"]
dependencies = [
    "curl_cffi>=0.7.1",
    "selectolax>=0.3.17",
    "lxml>=5.1.0",
    "loguru>=0.7.2",
]


[project.optional-dependencies]
dev = [
    "pytest",
    "build",
    "twine"
]

[tool.hatch.build.targets.sdist]
include = ["scrawlee"]

[tool.hatch.build.targets.wheel]
packages = ["scrawlee"]
